@@ -1,5 +1,6 @@
 version 9.0.
 date: dd/mm/yyyy
+  * added the possibility to enable/disable blacklisting on projects with validation already enabled
   * added the possibility to delete triples via Sheet2RDF service addTriples()
   * added a new lexicographer view for streamlined editing of OntoLex-Lemon lexicons
   * updated to LexInfo 3
